# telegram-bot-project-1

./: .coverage  .env.example  .env.railway  .gitignore  .pre-commit-config.yaml  ADMIN_BACK_BUTTON_FIX.md  AUTO_DEPLOY.md  AUTO_DEPLOY_SETUP.md  BOT_STATUS_REPORT.md  BUG_FIXES_REPORT.md  BUG_FIXES_REPORT_FIXED.md  CI_CD_IMPROVEMENTS.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_ISSUES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE_STEP_BY_STEP.md  DEPLOY_RAILWAY_GUIDE.md  DEPLOY_SUCCESS_REPORT.md  DEPLOY_TRIGGER.md  Dockerfile  ENV_DOCUMENTATION.md  FINAL_STATUS_REPORT.md  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY_FIXED.md  INDEPENDENT_DEPLOY_FIX.md  MIGRATION.md  PROBLEMS_SOLVED.md  PROCFILE_FIX.md  PRODUCTION_READY_GUIDE.md  PYTEST_ASYNCIO_SETUP.md  Procfile  QUICK_DEPLOY_CHEAT_SHEET.md  RAILWAY_ERROR_DIAGNOSIS.md  RAILWAY_FIX_SUMMARY.md  RAILWAY_SETUP_GUIDE.md  README.md  README_FIXED.md  README_improvements.md  REPLY_KEYBOARD_REMOVAL_REPORT.md  (+72 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
archive/: main_bot_railway_backup.py
handlers/: __init__.py  admin.py  admin_commands.py  chatgpt_commands.py  content_commands.py  diagnostics.py  reactions.py  stats.py  user_commands.py
locales/: en.json  ru.json
src/: bot.js
src/commands/: index.js
src/utils/: helpers.js
telegram-bot-project/: README.md  package.json
telegram-bot-project/src/: bot.js
telegram-bot-project/src/commands/: index.js
telegram-bot-project/src/utils/: helpers.js
tests/: __init__.py  conftest.py  test_help_commands.py  test_integration.py  test_performance.py
tests/handlers/: __init__.py  test_admin.py  test_reactions.py
tests/utils/: __init__.py  test_database.py  test_keyboards.py  test_localization.py
utils/: __init__.py  database.py  exceptions.py  keyboards.py  keyboards_backup.py  keyboards_minimal.py  keyboards_new.py  localization.py  openai_client.py
